--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -7,24 +7,12 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-  socket: /tmp/mysql.sock
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-
-development:
-  <<: *default
-  database: web_development
-  username: root
-  password: password
-  host: db
 
 test:
   <<: *default
   database: web_test
   username: root
   password: password
-  host: db
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  host: 127.0.0.1
