--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Re-Generate GraphQL Schema
-  nextjs-repo-test:
+  nextjs-repo-build:
     runs-on: ubuntu-latest
     needs: [graphql-schema-genaration]
     steps:
-      - name: build and test next.js repo
+      - name: build next.js repo
         uses: convictional/trigger-workflow-and-wait@v1.6.5
         with:
           owner: konyu
